--- a/public/stylesheets/compiled/site.css
+++ b/public/stylesheets/compiled/site.css
@@ -253,38 +253,75 @@ tbody th {
 /* line 215, ../../../app/stylesheets/site.scss */
 tbody tr {
   background: #FCFDFE;
-  border-bottom: 1px solid #D4E0EE;
+  /*border-bottom: 1px solid #D4E0EE;*/
 }
 
 /* line 220, ../../../app/stylesheets/site.scss */
-tbody tr.odd {
-  background: #F7F9FC;
+tbody tr.double {
+  /*background: #F7F9FC;*/
+  border-top: 1px solid #D4E0EE;
 }
 
-/* line 222, ../../../app/stylesheets/site.scss */
+/* line 224, ../../../app/stylesheets/site.scss */
+tbody tr.odd {
+  /*background: #F7F9FC;*/
+  border-top: 1px solid #D4E0EE;
+  border-bottom: 1px solid #D4E0EE;
+}
+
+/* line 229, ../../../app/stylesheets/site.scss */
+table a.operate {
+  font-size: 11px;
+  color: black;
+  background-color: white;
+  border: 1px solid gray;
+  display: inline-block;
+  padding: 3px 8px 4px;
+  text-decoration: none;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
+  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+/* line 244, ../../../app/stylesheets/site.scss */
+table a.operate:hover {
+  color: white;
+  text-decoration: none;
+}
+
+/* line 248, ../../../app/stylesheets/site.scss */
+table a.operate:hover {
+  background-color: #fc9200;
+}
+
+/* line 251, ../../../app/stylesheets/site.scss */
 table a:link {
   color: #718ABE;
   text-decoration: none;
 }
 
-/* line 227, ../../../app/stylesheets/site.scss */
+/* line 256, ../../../app/stylesheets/site.scss */
 table a:visited {
   color: #718ABE;
   text-decoration: none;
 }
 
-/* line 232, ../../../app/stylesheets/site.scss */
+/* line 261, ../../../app/stylesheets/site.scss */
 table a:hover {
   color: #718ABE;
-  text-decoration: underline !important;
+  /*text-decoration: underline !important;*/
+  text-decoration: none;
 }
 
-/* line 237, ../../../app/stylesheets/site.scss */
+/* line 267, ../../../app/stylesheets/site.scss */
 tfoot th, tfoot td {
   font-size: 85%;
 }
 
-/* line 242, ../../../app/stylesheets/site.scss */
+/* line 272, ../../../app/stylesheets/site.scss */
 .shadow1 {
   box-shadow: 5px 5px #818181;
   -webkit-box-shadow: 5px 5px #818181;
@@ -297,7 +334,7 @@ tfoot th, tfoot td {
   border: 1px solid black;
 }
 
-/* line 254, ../../../app/stylesheets/site.scss */
+/* line 284, ../../../app/stylesheets/site.scss */
 .shadow {
   box-shadow: 7px 7px 8px #818181;
   -webkit-box-shadow: 7px 7px 8px #818181;
@@ -310,7 +347,7 @@ tfoot th, tfoot td {
   border: 1px solid black;
 }
 
-/* line 265, ../../../app/stylesheets/site.scss */
+/* line 295, ../../../app/stylesheets/site.scss */
 #tearshape {
   background: #f1f2f3;
   padding: 3px 5px;
@@ -323,7 +360,7 @@ tfoot th, tfoot td {
   -webkit-border-bottom-right-radius: 9px;
 }
 
-/* line 276, ../../../app/stylesheets/site.scss */
+/* line 306, ../../../app/stylesheets/site.scss */
 #roundshape {
   background: #eaf2f5;
   padding: 3px 5px;
@@ -335,7 +372,7 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 288, ../../../app/stylesheets/site.scss */
+/* line 318, ../../../app/stylesheets/site.scss */
 .round {
   background: #eaf2f5;
   padding: 3px 5px;
@@ -344,14 +381,14 @@ tfoot th, tfoot td {
   -webkit-border-radius: 5px;
 }
 
-/* line 296, ../../../app/stylesheets/site.scss */
+/* line 326, ../../../app/stylesheets/site.scss */
 .curlycontainer {
   border: 1px solid #b8b8b8;
   margin-bottom: 1em;
   width: 300px;
 }
 
-/* line 302, ../../../app/stylesheets/site.scss */
+/* line 332, ../../../app/stylesheets/site.scss */
 .curlycontainer .innerdiv {
   background: transparent url(brcorner.gif) bottom right no-repeat;
   position: relative;
@@ -360,7 +397,7 @@ tfoot th, tfoot td {
   padding: 1px 4px 15px 5px;
 }
 
-/* line 310, ../../../app/stylesheets/site.scss */
+/* line 340, ../../../app/stylesheets/site.scss */
 .bordershape {
   padding: 3px 5px;
   margin: 10px 10px 0 0;
@@ -369,12 +406,12 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 317, ../../../app/stylesheets/site.scss */
+/* line 347, ../../../app/stylesheets/site.scss */
 .bordershape a {
   text-decoration: none;
 }
 
-/* line 320, ../../../app/stylesheets/site.scss */
+/* line 350, ../../../app/stylesheets/site.scss */
 .solidshape {
   padding: 3px 5px;
   margin: 10px 10px 0 0;
@@ -383,7 +420,7 @@ tfoot th, tfoot td {
   -webkit-border-radius: 3px;
 }
 
-/* line 328, ../../../app/stylesheets/site.scss */
+/* line 358, ../../../app/stylesheets/site.scss */
 .fullshape {
   font-size: 14px;
   text-align: center;
@@ -400,7 +437,7 @@ tfoot th, tfoot td {
 /*html{font-size:62.5%}
 body{font-size:1.2em;color:#294f88}*/
 /*.customer_service {margin:10px;border:1px solid #92cdec;background:#d7e7ff;padding:30px 30px 0 30px}*/
-/* line 343, ../../../app/stylesheets/site.scss */
+/* line 373, ../../../app/stylesheets/site.scss */
 .customer_service {
   margin: 10px auto;
   background-color: white;
@@ -416,14 +453,14 @@ h2{margin:0;padding:10px 0 5px 0;font-size:1.5em;clear:both}
 p{font-size:1.2em;line-height:170%;margin-bottom:30px;clear:both}
 ul,ol{padding:0;margin:0;font-size:1.2em}
 */
-/* line 352, ../../../app/stylesheets/site.scss */
+/* line 382, ../../../app/stylesheets/site.scss */
 .customer_service h1 {
   margin: 0;
   padding: 0 0 10px 0;
   font-size: 1.2em;
 }
 
-/* line 353, ../../../app/stylesheets/site.scss */
+/* line 383, ../../../app/stylesheets/site.scss */
 .customer_service p {
   font-size: 1.2em;
   line-height: 170%;
@@ -431,14 +468,14 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   clear: both;
 }
 
-/* line 354, ../../../app/stylesheets/site.scss */
+/* line 384, ../../../app/stylesheets/site.scss */
 .customer_service ul, ol {
   padding: 0;
   margin: 0;
   font-size: 1em;
 }
 
-/* line 355, ../../../app/stylesheets/site.scss */
+/* line 385, ../../../app/stylesheets/site.scss */
 .customer_service ul, .customer_service ol {
   list-style-type: none;
   background: url(/images/dotted.gif) 0 0 repeat-x;
@@ -447,7 +484,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   margin: 0 10px 30px 0;
 }
 
-/* line 362, ../../../app/stylesheets/site.scss */
+/* line 392, ../../../app/stylesheets/site.scss */
 .customer_service li {
   background: url(/images/dotted.gif) bottom left repeat-x;
   width: 180px;
@@ -455,7 +492,7 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   padding: 0;
 }
 
-/* line 368, ../../../app/stylesheets/site.scss */
+/* line 398, ../../../app/stylesheets/site.scss */
 .customer_service li a {
   padding: 8px 20px 8px 0;
   width: 160px;
@@ -465,13 +502,13 @@ ul,ol{padding:0;margin:0;font-size:1.2em}
   color: #294f88;
 }
 
-/* line 369, ../../../app/stylesheets/site.scss */
+/* line 399, ../../../app/stylesheets/site.scss */
 .customer_service li a:hover {
   background-image: url(/images/arrow-right-dark.gif);
 }
 
 /* table sorter style */
-/* line 372, ../../../app/stylesheets/site.scss */
+/* line 402, ../../../app/stylesheets/site.scss */
 table.tablesorter thead tr .header {
   /*background-image: url(/images/bg.gif);*/
   background-repeat: no-repeat;
@@ -479,25 +516,155 @@ table.tablesorter thead tr .header {
   cursor: pointer;
 }
 
-/* line 378, ../../../app/stylesheets/site.scss */
+/* line 408, ../../../app/stylesheets/site.scss */
 table.tablesorter tbody tr:hover {
   /*background: #dfeef9;*/
   background: #e6edf5;
 }
 
-/* line 382, ../../../app/stylesheets/site.scss */
+/* line 412, ../../../app/stylesheets/site.scss */
 table.tablesorter thead tr .headerSortUp {
   background-image: url(/images/asc.gif);
 }
 
-/* line 385, ../../../app/stylesheets/site.scss */
+/* line 415, ../../../app/stylesheets/site.scss */
 table.tablesorter thead tr .headerSortDown {
   background-image: url(/images/desc.gif);
 }
 
-/* line 388, ../../../app/stylesheets/site.scss */
+/* line 418, ../../../app/stylesheets/site.scss */
 table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
   padding-right: 20px;
   background-color: #a3c0ea;
   color: white;
+}
+
+/* CSS3 buttons */
+/* line 425, ../../../app/stylesheets/site.scss */
+.button, .button:visited {
+  background: #222222 url(/images/overlay.png) repeat-x;
+  display: inline-block;
+  padding: 5px 10px 6px;
+  color: #fff;
+  text-decoration: none;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
+  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  position: relative;
+  cursor: pointer;
+}
+
+/* line 441, ../../../app/stylesheets/site.scss */
+.button:hover {
+  background-color: #111;
+  color: #fff;
+}
+
+/* line 442, ../../../app/stylesheets/site.scss */
+.button:active {
+  top: 1px;
+}
+
+/* line 443, ../../../app/stylesheets/site.scss */
+.small.button, .small.button:visited {
+  font-size: 11px;
+}
+
+/* line 445, ../../../app/stylesheets/site.scss */
+.button, .button:visited,
+.medium.button, .medium.button:visited {
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 1;
+  text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
+}
+
+/* line 452, ../../../app/stylesheets/site.scss */
+.large.button, .large.button:visited {
+  font-size: 14px;
+  padding: 8px 14px 9px;
+}
+
+/* line 457, ../../../app/stylesheets/site.scss */
+.super.button, .super.button:visited {
+  font-size: 34px;
+  padding: 8px 14px 9px;
+}
+
+/* line 462, ../../../app/stylesheets/site.scss */
+.pink.button, .magenta.button:visited {
+  background-color: #e22092;
+}
+
+/* line 463, ../../../app/stylesheets/site.scss */
+.pink.button:hover {
+  background-color: #c81e82;
+}
+
+/* line 464, ../../../app/stylesheets/site.scss */
+.green.button, .green.button:visited {
+  background-color: #91bd09;
+}
+
+/* line 465, ../../../app/stylesheets/site.scss */
+.green.button:hover {
+  background-color: #749a02;
+}
+
+/* line 466, ../../../app/stylesheets/site.scss */
+.red.button, .red.button:visited {
+  background-color: #e62727;
+}
+
+/* line 467, ../../../app/stylesheets/site.scss */
+.red.button:hover {
+  background-color: #cf2525;
+}
+
+/* line 468, ../../../app/stylesheets/site.scss */
+.orange.button, .orange.button:visited {
+  background-color: #ff5c00;
+}
+
+/* line 469, ../../../app/stylesheets/site.scss */
+.orange.button:hover {
+  background-color: #d45500;
+}
+
+/* line 470, ../../../app/stylesheets/site.scss */
+.blue.button, .blue.button:visited {
+  background-color: #2981e4;
+}
+
+/* line 471, ../../../app/stylesheets/site.scss */
+.blue.button:hover {
+  background-color: #2575cf;
+}
+
+/* line 472, ../../../app/stylesheets/site.scss */
+.yellow.button, .yellow.button:visited {
+  background-color: #ffb515;
+}
+
+/* line 473, ../../../app/stylesheets/site.scss */
+.yellow.button:hover {
+  background-color: #fc9200;
+}
+
+/* line 474, ../../../app/stylesheets/site.scss */
+.white.button, .white.button:visited {
+  background-color: white;
+}
+
+/* line 475, ../../../app/stylesheets/site.scss */
+.white.button:hover {
+  background-color: #fc9200;
+}
+
+/* line 478, ../../../app/stylesheets/site.scss */
+#task_detail {
+  font-size: 80%;
 }
