--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -214,11 +214,39 @@ tbody th {
 
 tbody tr {
   background: #FCFDFE; 
-  border-bottom: 1px solid #D4E0EE;
+  /*border-bottom: 1px solid #D4E0EE;*/
 }
 
-tbody tr.odd { background: #F7F9FC; }
-
+tbody tr.double {
+  border-top: 1px solid #D4E0EE;
+}
+tbody tr.odd {
+  /*background: #F7F9FC;*/
+  border-top: 1px solid #D4E0EE;
+  border-bottom: 1px solid #D4E0EE;
+}
+table a.operate {
+  font-size: 11px;
+  color: black;
+  background-color: white;
+  border: 1px solid gray;
+  display: inline-block; 
+  padding: 3px 8px 4px; 
+  text-decoration: none;
+  -moz-border-radius: 6px; 
+  -webkit-border-radius: 6px;
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+  border-bottom: 1px solid rgba(0,0,0,0.25);
+}
+table a.operate:hover {
+	color: white;
+	text-decoration: none;
+}
+table a.operate:hover {
+  background-color: #fc9200;
+}
 table a:link {
 	color: #718ABE;
 	text-decoration: none;
@@ -231,7 +259,8 @@ table a:visited {
 
 table a:hover {
 	color: #718ABE;
-	text-decoration: underline !important;
+	/*text-decoration: underline !important;*/
+	text-decoration: none;
 }
 
 tfoot th, tfoot td {
@@ -294,17 +323,17 @@ tfoot th, tfoot td {
 }
 
 .curlycontainer{
-border: 1px solid #b8b8b8;
-margin-bottom: 1em;
-width: 300px;
+  border: 1px solid #b8b8b8;
+  margin-bottom: 1em;
+  width: 300px;
 }
 
 .curlycontainer .innerdiv{
-background: transparent url(brcorner.gif) bottom right no-repeat;
-position: relative;
-left: 2px;
-top: 2px;
-padding: 1px 4px 15px 5px;
+  background: transparent url(brcorner.gif) bottom right no-repeat;
+  position: relative;
+  left: 2px;
+  top: 2px;
+  padding: 1px 4px 15px 5px;
 }
 
 .bordershape { 
@@ -315,7 +344,7 @@ padding: 1px 4px 15px 5px;
   -webkit-border-radius: 3px;
 }
 .bordershape a {
-	text-decoration: none;
+  text-decoration: none;
 }
 .solidshape { 
   padding: 3px 5px;
@@ -389,4 +418,62 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
   padding-right: 20px;
   background-color: #a3c0ea;
   color: white;
+}
+
+/* CSS3 buttons */
+.button, .button:visited {
+  background: #222 url(/images/overlay.png) repeat-x; 
+  display: inline-block; 
+  padding: 5px 10px 6px; 
+  color: #fff; 
+  text-decoration: none;
+  -moz-border-radius: 6px; 
+  -webkit-border-radius: 6px;
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+  border-bottom: 1px solid rgba(0,0,0,0.25);
+  position: relative;
+  cursor: pointer
+}
+
+.button:hover							{ background-color: #111; color: #fff; }
+.button:active							{ top: 1px; }
+.small.button, .small.button:visited 			{ font-size: 11px;}
+.button, .button:visited,
+.medium.button, .medium.button:visited 		{ 
+  font-size: 13px; 
+  font-weight: bold; 
+  line-height: 1; 
+  text-shadow: 0 -1px 1px rgba(0,0,0,0.25); 
+}
+
+.large.button, .large.button:visited 			{ 
+  font-size: 14px; 
+  padding: 8px 14px 9px; 
+}
+
+.super.button, .super.button:visited 			{ 
+  font-size: 34px; 
+  padding: 8px 14px 9px; 
+}
+
+.pink.button, .magenta.button:visited		{ background-color: #e22092; }
+.pink.button:hover							{ background-color: #c81e82; }
+.green.button, .green.button:visited		{ background-color: #91bd09; }
+.green.button:hover						    { background-color: #749a02; }
+.red.button, .red.button:visited			{ background-color: #e62727; }
+.red.button:hover							{ background-color: #cf2525; }
+.orange.button, .orange.button:visited		{ background-color: #ff5c00; }
+.orange.button:hover						{ background-color: #d45500; }
+.blue.button, .blue.button:visited		    { background-color: #2981e4; }
+.blue.button:hover							{ background-color: #2575cf; }
+.yellow.button, .yellow.button:visited		{ background-color: #ffb515; }
+.yellow.button:hover						{ background-color: #fc9200; }
+.white.button, .white.button:visited		{ background-color: white; }
+.white.button:hover						{ background-color: #fc9200; }
+
+
+#task_detail {
+  font-size: 80%;
 }
