--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -2,5 +2,6 @@
   - f.inputs do
     = f.input :title, :input_html => { :class => "validate[required],minSize[5]" }
     = f.input :article_type, :collection => ['wiki', 'rule'], :input_html => {:class => "validate[required]"}
-    = f.input :content, :as => :text, :input_html => { :class => 'mceEditor' }
+    =# f.input :content, :as => :text, :input_html => { :class => 'mceEditor' }
+    = f.tinymce_managed :content
     = f.commit_button
