--- a/app/views/articles/edit.html.haml
+++ b/app/views/articles/edit.html.haml
@@ -1,6 +1,6 @@
 #roundshape
-  = link_to 'Show', @article
+  = link_to t('global.show'), @article
   |
-  \#{link_to 'Back', articles_path}
+  \#{link_to t('global.back'), articles_path}
 
 = render 'form'
