--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,17 +12,14 @@
     = stylesheet_link_tag 'validationEngine.jquery'
 
     =# javascript_include_tag 'rails'
-    = stylesheet_link_tag 'formtastic','formtastic_changes'
+    =# stylesheet_link_tag 'formtastic'#,'formtastic_changes'
     = formtastic_stylesheet_link_tag
     =# include_tiny_mce_if_needed
     = javascript_include_tag "autocomplete-rails.js"
     = javascript_include_tag 'infogrid', 'fmenu', 'slideshow', 'des', 'jquery.easyListSplitter','jquery-ui-1.8.12.custom.min', 'jquery.notice', 'coin-slider.min', 'slideout_tooltip', 'jquery.bxslider2.min', 'jquery.jqplot.min', 'jquery.tipsy', 'jquery.tablesorter.min'
-    = stylesheet_link_tag 'infogrid', 'fmenu', 'scroller', 'news', 'simpleTicker', 'smoothness/jquery-ui-1.8.12.custom', 'default/jx.stylesheet', 'jquery.notice', 'coin-slider-styles', 'slideout_tooltip', 'bxslider2', 'jquery.jqplot.min', 'tipsy'
+    = stylesheet_link_tag 'infogrid', 'fmenu', 'scroller', 'news', 'simpleTicker', 'smoothness/jquery-ui-1.8.12.custom', 'default/jx.stylesheet', 'jquery.notice', 'coin-slider-styles', 'slideout_tooltip', 'bxslider2', 'jquery.jqplot.min', 'tipsy', 'simpleform'
     /[if lt IE 9]
       = javascript_include_tag 'excanvas.min'
-
-    =# javascript_include_tag 'jcarousellite_1.0.1c4'
-    =# javascript_include_tag 'ticker'
 
     = javascript_include_tag 'site'
 
