--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -8,26 +8,26 @@
     $("#task_custom_judge").each(function() {
      this.checked = false;
     });
-    $("#task_custom_judge_content_input").hide('fast');
+    $("#task_custom_judge_content").hide('fast');
     $("#task_custom_judge").click(function() {
       if(this.checked) {
-        $("#task_custom_judge_content_input").show('fast');
+        $("#task_custom_judge_content").show('fast');
       }
       else {
-        $("#task_custom_judge_content_input").hide('fast');
+        $("#task_custom_judge_content").hide('fast');
       }
      });
 
     $("#task_custom_msg").each(function() {
      this.checked = false;
     });
-    $("#task_custom_msg_content_input").hide('fast');
+    $("#task_custom_msg_content").hide('fast');
     $("#task_custom_msg").click(function() {
       if(this.checked) {
-        $("#task_custom_msg_content_input").show('fast');
+        $("#task_custom_msg_content").show('fast');
       }
       else {
-        $("#task_custom_msg_content_input").hide('fast');
+        $("#task_custom_msg_content").hide('fast');
       }
      });
 
@@ -44,58 +44,63 @@
       }
      });
    });
-- semantic_form_for @task do |f| 
-  - f.inputs do
-    = f.input :title, :input_html => { :class => "validate[required],minSize[5]" }
-    %li{:id=>'virtual_task'}
+- simple_form_for @task do |f| 
+  -# f.inputs do
+  = f.input :title, :input_html => { :class => "validate[required],minSize[5]" }
+
+  #virtual_task
+    .input.optional
       = label_tag t('task.virtual_task')
       = check_box_tag "virtual"
-      %p{:class => 'inline-hints'}
-        = t 'formtastic.hints.task.virtual'
-    =# f.input :task_type, :as => 'select', :collection => {'淘宝' => 'taobao', '拍拍' => 'paipai', '有啊'=>'youa', '提现'=>'cash'}, :input_html => { :class => "validate[required]" }
-    = f.input :task_type, :as => 'select', :collection => {@local_type => @part_type, '提现'=>'cash'}, :input_html => { :class => "validate[required]" }
+      = t 'formtastic.hints.task.virtual'
 
-    %li
-      = label_tag t('formtastic.labels.task.shop')
-      = current_user.active_shop.part_id
-    = f.input :link, :input_html => { :class => "validate[required],custom[url]" }
+  = f.input :task_type, :as => 'select', :collection => {@local_type => @part_type, '提现'=>'cash'}, :input_html => { :class => "validate[required]" }
 
-    %span{:style=>'color:red'}= "根据价格消耗相应的发布点,参考平台说明"
-    = f.input :price, :input_html => { :class => "validate[required],custom[number],min[0.01]" }
+  .input.optional
+    = label_tag t('formtastic.labels.task.shop')
+    = current_user.active_shop.part_id
 
-    = f.input :tran_type, :as => 'select', :collection => {'顺丰' => 'sf', 'EMS' => 'ems', '申通' => 'st', '圆通' => 'yt', '韵达' => 'yd', '中通' => 'zt'}
-    = f.input :tran_id
-    %hr
-    %li
-      = label_tag t('task.condition')
+  = f.input :link, :input_html => { :class => "validate[required],custom[url]" }
 
-    %span{:style=>'color:red'}= t 'task.spend', :point => 0.2
-    = f.input :worker_level, :as => :select, :collection => (0..5).to_a, :input_html => { :class => "validate[required]" }
+  %span{:style=>'color:red'}= "根据价格消耗相应的发布点,参考平台说明"
+  = f.input :price, :input_html => { :class => "validate[required],custom[number],min[0.01]" }
 
-    %span{:style=>'color:red'}= t 'task.spend', :point => 0.2
-    = f.input :real_level, :as => :select, :collection => (0..Setting.first.real_level).to_a, :input_html => { :class => "validate[required]" }
+  = f.input :tran_type, :as => 'select', :collection => {'顺丰' => 'sf', 'EMS' => 'ems', '申通' => 'st', '圆通' => 'yt', '韵达' => 'yd', '中通' => 'zt'}
+  = f.input :tran_id
 
-    %span{:style=>'color:red'}= "1天(0), 2天(0), 3天(-0.5), 4 天(-1), 5天(-1.5), 6天(-2) 按天数递增"
-    %br
-    %span{:style=>'color:red'}= t 'task.taskday_hint'
-    = f.input :task_day, :as => :select, :collection => (1..6).to_a, :input_html => { :class => "validate[required]" }
+  = label_tag t('task.condition')
+  %hr
 
-    %span{:style=>'color:red'}= "10天(-0.1), 20天(-0.2), 30天(-0.3), 40天(-0.4), 50天(-0.5), 60天(-0.6) 依次递增"
-    = f.input :avoid_day, :as => :select, :collection => [0,10,20,30,40,50,60], :input_html => { :class => "validate[required]" }
+  %span{:style=>'color:red'}= t 'task.spend', :point => 0.2
+  = f.input :worker_level, :as => :select, :collection => (0..5).to_a, :input_html => { :class => "validate[required]" }
 
-    %span{:style=>'color:red'}= t 'task.spend', :point => Setting.first.all_star
-    = f.input :all_star
+  %span{:style=>'color:red'}= t 'task.spend', :point => 0.2
+  = f.input :real_level, :as => :select, :collection => (0..Setting.first.real_level).to_a, :input_html => { :class => "validate[required]" }
 
-    %span{:style=>'color:red'}= t 'task.spend', :point => Setting.first.custom_judge
-    = f.input :custom_judge
-    = f.input :custom_judge_content, :as => :text
+  %span{:style=>'color:red'}= "1天(0), 2天(0), 3天(-0.5), 4 天(-1), 5天(-1.5), 6天(-2) 按天数递增"
+  %br
+  %span{:style=>'color:red'}= t 'task.taskday_hint'
+  = f.input :task_day, :as => :select, :collection => (1..6).to_a, :input_html => { :class => "validate[required]" }
 
-    %span{:style=>'color:red'}= t 'task.spend', :point => Setting.first.custom_msg
-    = f.input :custom_msg
-    = f.input :custom_msg_content, :as => :text
-    %hr
+  %span{:style=>'color:red'}= "10天(-0.1), 20天(-0.2), 30天(-0.3), 40天(-0.4), 50天(-0.5), 60天(-0.6) 依次递增"
+  = f.input :avoid_day, :as => :select, :collection => [0,10,20,30,40,50,60], :input_html => { :class => "validate[required]" }
 
-    = f.commit_button t('site.new_task')
+  %span{:style=>'color:red'}= t 'task.spend', :point => Setting.first.all_star
+  = f.input :all_star
+
+  %span{:style=>'color:red'}= t 'task.spend', :point => Setting.first.custom_judge
+  = f.input :custom_judge
+  = f.input :custom_judge_content, :as => :text
+
+  %span{:style=>'color:red'}= t 'task.spend', :point => Setting.first.custom_msg
+  = f.input :custom_msg
+  = f.input :custom_msg_content, :as => :text
+  %hr
+  
+  .input.optional
     = label_tag t('account.operate_password')
     = password_field_tag :operate_password
     = t('account.operate_password_desc')
+
+  =# f.commit_button t('site.new_task')
+  = f.button :submit#t('site.new_task')
