update user interface

--- a/app/stylesheets/site.scss
+++ b/app/stylesheets/site.scss
@@ -477,3 +477,44 @@ table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSo
 #task_detail {
   font-size: 80%;
 }
+
+#nav a, #nav a:active, #nav a:visited {
+	display:block;
+	float:left;
+	padding:5px 8px;
+	background:#DAF1C9;
+	color:green;
+	margin-right:10px;
+	text-decoration:none;
+	outline:none;
+	}
+#nav a.selected, #nav a.selected:active, #nav a.selected:visited {
+	background:#C51D1D;
+	color:#fff;
+	text-decoration:none;
+	outline:none;
+	}
+#nav2 a, #nav2 a:active, #nav2 a:visited {
+	display:block;
+	float:left;
+	padding:5px 8px;
+	background:#DAF1C9;
+	color:green;
+	margin-right:10px;
+	text-decoration:none;
+	outline:none;
+	}
+#nav2 a.selected, #nav2 a.selected:active, #nav2 a.selected:visited {
+	background:#C51D1D;
+	color:#fff;
+	text-decoration:none;
+	outline:none;
+	}
+.hiddencontent,.hiddencontent2 {
+	padding:12px;
+	background:white;
+	display:none;
+	}
+.clear {
+	clear:both;
+	}
